2007-05-30  Sebastien Pouliot  <sebastien@ximian.com>

	* TestImageAttributes.cs: Add test cases for ColorMatrixFlags and for
	Gray ColorMatrix uses.

2007-05-23  Sebastien Pouliot  <sebastien@ximian.com> 

	* PngCodecTest.cs: Add test cases for 2bpp PNG images. Add some 
	palette assertions in 1bpp and 4bpp test cases.

2007-05-17  Sebastien Pouliot  <sebastien@ximian.com> 

	* MetafileTest.cs: Ignore test Measure if no fonts are available.

2007-05-17  Sebastien Pouliot  <sebastien@ximian.com>

	* MetafileTest.cs: Add a few test cases on what happens when recording
	metafiles.

2007-05-08  Sebastien Pouliot  <sebastien@ximian.com> 

	* TestJpegCodec.cs: Add test cases for 8bpp indexed greyscale JPEG

2007-04-26  Sebastien Pouliot  <sebastien@ximian.com> 

	* MetafileTest.cs: Add test cases for some .ctor(Stream...)

2007-04-26  Sebastien Pouliot  <sebastien@ximian.com>

	* MetafileTest.cs: Add test cases for more .ctors

2007-04-16  Sebastien Pouliot  <sebastien@ximian.com>

	* GifCodecTest.cs: Fix typo and add Stride check.
	* IconCodecTest.cs: Fix typo.
	* PngCodecTest.cs: Fix typo and add Stride check.
	* TiffCodecTest.cs: Fix typo.

2007-04-12  Sebastien Pouliot  <sebastien@ximian.com>

	* TestBmpCodec.cs: Reenable some NotWorking test case.
	* TestJpegCodec.cs: Reenable some NotWorking test case.
	* TiffCodecTest.cs: Reenable some NotWorking test case.

2007-04-11  Sebastien Pouliot  <sebastien@ximian.com>

	* GifCodecTest.cs: Reenable some NotWorking test cases.
	* IconCodecTest.cs: Reenable some NotWorking test cases.
	* PngCodecTest.cs: Reenable some NotWorking test cases.

2007-04-10  Sebastien Pouliot  <sebastien@ximian.com> 

	* GifCodecTest.cs: Fix Save* test cases to check 8bpp indexed for all
	GIF saved. Added comments to why we're not getting the "right" Red.
	* TestBmpCodec.cs: Remove "NotWorking" from Bitmap32bitPixels test 
	case. The file is a 32bpp RGB (no alpha).

2007-03-28  Sebastien Pouliot  <sebastien@ximian.com>
